# sem-tool

./: .gitignore  .release-plz.toml  .rumdl.toml  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: hygiene.yml  release-plz.yml  release.yml  testing.yml
sem-tool-mcp/: Cargo.toml
sem-tool-mcp/src/: main.rs
src/: cli.rs  lib.rs  main.rs  misc.rs  regex.rs  results.rs
tests/: cli_basics.rs  cli_bump.rs  cli_bump_reset.rs  cli_compare.proptest-regressions  cli_compare.rs  cli_explain.proptest-regressions  cli_explain.rs  cli_filter_test.rs  cli_generate.rs  cli_insta.rs  cli_insta_yaml_native.rs  cli_min_max.proptest-regressions  cli_min_max.rs  cli_select.proptest-regressions  cli_select.rs  cli_set.rs  cli_sort.rs  cli_validate.rs  common.rs
tests/common/: cli_insta_cases.rs  mod.rs
tests/snapshots/: cli_insta__bump-reset.clear.1.snap  cli_insta__bump-reset.major.1.snap  cli_insta__bump-reset.simple.1.snap  cli_insta__bump.simple.1.snap  cli_insta__bump.simple.2.snap  cli_insta__cli_insta-22.snap  cli_insta__compare.complex.1.snap  cli_insta__compare.exit-status.1.snap  cli_insta__compare.exit-status.2.snap  cli_insta__compare.exit-status.3.snap  cli_insta__compare.exit-status.4.snap  cli_insta__compare.exit-status.5.snap  cli_insta__compare.exit-status.6.snap  cli_insta__compare.semantic-exit-status.1.snap  cli_insta__compare.valid-semver.1.snap  cli_insta__explain.valid-semver.1.snap  cli_insta__explain.valid-semver.2.snap  cli_insta__explain.valid-semver.3.snap  cli_insta__explain.valid-semver.4.snap  cli_insta__filter.invalid-order.1.snap  cli_insta__filter.invalid-semver.1.snap  cli_insta__filter.invalid-semver.2.snap  cli_insta__filter.plain.1.snap  cli_insta__filter.plain.2.snap  cli_insta__help.bump.snap  cli_insta__help.compare.snap  cli_insta__help.explain.snap  cli_insta__help.filter-test.snap  cli_insta__help.generate.snap  cli_insta__help.root.snap  cli_insta__help.set.snap  cli_insta__help.sort.snap  cli_insta__help.validate.snap  cli_insta__help_mcp.bump.snap  cli_insta__help_mcp.compare.snap  cli_insta__help_mcp.explain.snap  cli_insta__help_mcp.filter-test.snap  cli_insta__help_mcp.generate.snap  cli_insta__help_mcp.root.snap  cli_insta__help_mcp.set.snap  (+85 more)
