# SPDX-License-Identifier: Apache-2.0
# Copyright 2025 canardleteer
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "sem-tool"
version = "0.1.14"
edition = "2024"
exclude = [
    "example-data/*",
]
license = "Apache-2.0"
keywords = ["semver", "tools", "cli"]
authors = ["canardleteer <eris.has.a.dad+github@gmail.com>"]
repository = "https://github.com/canardleteer/sem-tool"
homepage = "https://github.com/canardleteer/sem-tool"
categories = ["command-line-utilities"]
readme = "README.md"
description = "A simple Semantic Versioning CLI tool for parsing, filtering, sorting and explaining"

[package.metadata.wix]
upgrade-guid = "4B0BC255-6C49-4242-8F92-789262A65064"
path-guid = "D28BFC08-1707-4BF8-ACB8-9A4496178C5F"
license = false
eula = false

[dependencies]
rand = { version = "0.10.1", features = [ "std_rng" ] }
clap = { version = "4.6", features = ["derive"] }
indexmap = { version = "2.14.0", features= ["serde"] }
semver = { version = "1.0.28", features= ["serde"] }
thiserror = "2.0.18"
rand_regex = "0.19.0"

# NOTE(canardleteer): The inclusion of default `regex` added 3MB to the release
#                     binary, and that left somewhat of a sour taste in my
#                     mouth. Since we don't really currently use `regex` for
#                     much other than parsing a single string per application
#                     run, I think it's reasonable to shrink down the dependency
#                     tree at a performance cost.
regex = { version = "1.12.4", default-features = false, features = ["std"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"

# NOTE(canardleteer): YAML serialization trade-offs:
#
#   - `serde_yaml` (current): stable Serde integration; only used for
#     `serde_yaml::to_string` in main. Upstream crate is deprecated/archived
#     and has YAML 1.1 quirks.
#
#   - `serde_yml`: active fork with a drop-in API, but over-quotes strings in
#     output, breaking interoperability with tools like `yq`.
#
#   - `saphyr-rs/saphyr` (target direction): YAML 1.2 compliant, passes the
#     YAML test suite, correctness-first. Official `saphyr-serde` is planned;
#     migrate when Serde integration lands from saphyr-rs rather than serde_yml.
serde_yaml = "0.9.34"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.48.0", features = ["json", "yaml"] }
insta-cmd = "0.7.0"
proptest = "1.11.0"
proptest-semver = "0.1.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
